Nativ Versiunea Finala

--- a/WEB Phone (Nativ)/Alegerea.html
+++ b/WEB Phone (Nativ)/Alegerea.html
@@ -25,7 +25,7 @@
     </nav>
 
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
     </header>
     <aside>
         <div id='gcw_mainFlPKnCG4I' class='gcw_mainFlPKnCG4I'></div>
@@ -40,7 +40,7 @@
                 <h2>Cum să aleg un smartphon perfect?</h2>
                 <p>In ziua de azi, putine obiecte au devenit atat de utile precum un smartphone. Atunci cand vrei sa iti schimbi telefonul, ai trei mari optiuni, in functie de sistemul de operare: iOS, Android si Windows Phone. O problema destul de spinoasa, cand te gandesti ca se apropie Black Friday si in ziua respectiva chiar nu prea ai timp sa meditezi la alegerea potrivita.</p>
                 <p>In privinta iPhone, lucrurile sunt relativ simple, pentru ca ai doar cateva modele din care sa alegi. Nu vrei sa dai o caruta de bani pentru iPhone 5S sau 5C? Nicio problema! Alegi iPhone 5 si te-ai rezolvat. Daca iti place interfata Windows Phone, alegerile sunt si ele destul de putine. Insa marea problema apare in cazul Android, unde chiar si o lista scurta cuprinde zeci de modele, fara sa mai includem telefoanele cu tastatura. Deci, cum sa-ti alegi telefonul potrivit?</p>
-                <img class="photo" src="IMG/bak.jpg">
+                <img class="photo" src="IMG/bak.jpg" alt="...">
                 <h2>SISTEM DE OPERARE</h2>
                 <p>E poate primul lucru pe care sa-l iei in calcul. Fiecare OS are avantaje si dezavantaje si o alegere gresita te poate face sa regreti mult timp. Daca vrei un telefon relativ simplu, care sa se miste bine si sa nu-ti dea multe batai de cap cu setarile sau posibilitatile de personalizare, alege un iPhone. Cel mai mare dezavantaj e insa pretul. In schimb, daca iti place designul interfetei Metro si vrei sa fii putin altfel, incearca Windows Phone.</p>
                 <p>Am lasat Android la urma pentru ca se adreseaza atat celor care nu au un buget foarte mare cat si celor mai geek dintre noi. Fragmentarea Android in schimb poate pune ceva probleme. Daca nu alegi un Nexus, ai ceva de asteptat pana sa primesti un update, si in general majoritatea telefoanelor nu primesc mai mult de doua actualizari. In plus, chiar si varfurile de gama se mai confrunta cu momente in care au lag si se misca precum o broasca testoasa. Nu mai vorbim de telefoanele low-end. Insa Android mai are un avantaj. Daca nu-ti convine ROM-ul instalat de producator, il poti schimba oricand cu un ROM custom. Sau ti-l poti crea singur, daca te pricepi.</p>
@@ -63,7 +63,7 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
