--- a/WEB Phone (Nativ)/Despre noi.html
+++ b/WEB Phone (Nativ)/Despre noi.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ro">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
     </nav>
 
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
     </header>
     <aside>
         <div id='gcw_mainFlPKnCG4I' class='gcw_mainFlPKnCG4I'></div>
@@ -47,7 +47,7 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
