--- a/WEB Phone (Nativ)/Acasă.html
+++ b/WEB Phone (Nativ)/Acasă.html
@@ -25,7 +25,7 @@
     </nav>
 
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
         <h1>Cele mai bune telefoane în 2019 - Top 10 Recomandari:</h1>
     </header>
 
@@ -37,7 +37,7 @@
 
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/p20.jpg">
+                <img class="photo" src="IMG/p20.jpg" alt="...">
             </div>
 
             <div class="description">
@@ -59,7 +59,7 @@
 
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/s10+.jpg">
+                <img class="photo" src="IMG/s10+.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>2.Samsung Galaxy S10 Plus</h2>
@@ -78,7 +78,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/3xl.jpg">
+                <img class="photo" src="IMG/3xl.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>3.GOOGLE PIXEL 3 XL</h2>
@@ -98,7 +98,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/mi 9.jpg">
+                <img class="photo" src="IMG/mi9.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>4.Xiaomi Mi 9</h2>
@@ -118,7 +118,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/6T.jpg">
+                <img class="photo" src="IMG/6T.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>5.OnePlus 6T</h2>
@@ -138,7 +138,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/note 7.jpg">
+                <img class="photo" src="IMG/note7.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>6.Xiaomi Redmi Note 7</h2>
@@ -158,7 +158,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/XS Max.jpg">
+                <img class="photo" src="IMG/XSMax.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>7.Apple iPhone Xs Max</h2>
@@ -178,7 +178,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/smart Z.jpg">
+                <img class="photo" src="IMG/smartZ.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>8.HUAWEI P smart Z</h2>
@@ -198,7 +198,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/M20.jpg">
+                <img class="photo" src="IMG/M20.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>9.Samsung Galaxy M20</h2>
@@ -218,7 +218,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/8 pro.jpg">
+                <img class="photo" src="IMG/8pro.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>10.Xiaomi Redmi Note 8 Pro</h2>
@@ -243,7 +243,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
