--- a/WEB Phone (Nativ)/Contact.html
+++ b/WEB Phone (Nativ)/Contact.html
@@ -17,15 +17,15 @@
             <li><a href="Video.html">Video</a></li>
             <li><a href="Contact.html">Contacte</a></li>
             <li><a href="Despre noi.html">Despre noi</a></li>
-            <li><a href="Alegerea.html">Ce să aleg?</a></li>s
+            <li><a href="Alegerea.html">Ce să aleg?</a></li>
         </ul>
     </nav>
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
         <h1>Contacte:</h1>
     </header>
 <section class="contacte">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d36710.46750896094!2d27.891060449999998!3d47.7612147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1577443074188!5m2!1sru!2s" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d36710.46750896094!2d27.891060449999998!3d47.7612147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1577443074188!5m2!1sru!2s" width="100%" height="500px"></iframe>
 </section>
 </body>
 
