--- a/WEB Phone (Nativ)/Video.html
+++ b/WEB Phone (Nativ)/Video.html
@@ -22,7 +22,7 @@
     </nav>
 
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
         <h1>Video:</h1>
     </header>
     <section class="video">
@@ -66,6 +66,7 @@
             <li>
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/AkDfh_RG0F0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </li>
+            
     </section>
 </body>
 
