--- a/WEB Phone (Landing)/Acasă.html
+++ b/WEB Phone (Landing)/Acasă.html
@@ -25,7 +25,7 @@
       </nav>
 
     <header>
-        <img src="IMG/logo.png">
+        <img src="IMG/logo.png" alt="...">
         <h1>Cele mai bune telefoane în 2k20 - Top 10 Recomandari:</h1>
     </header>
 
@@ -37,7 +37,7 @@
 
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/p20.jpg">
+                <img class="photo" src="IMG/p20.jpg" alt="...">
             </div>
 
             <div class="description">
@@ -59,7 +59,7 @@
 
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/s10+.jpg">
+                <img class="photo" src="IMG/s10+.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>2.Samsung Galaxy S10 Plus</h2>
@@ -78,7 +78,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/3xl.jpg">
+                <img class="photo" src="IMG/3xl.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>3.GOOGLE PIXEL 3 XL</h2>
@@ -98,7 +98,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/mi 9.jpg">
+                <img class="photo" src="IMG/mi9.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>4.Xiaomi Mi 9</h2>
@@ -118,7 +118,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/6T.jpg">
+                <img class="photo" src="IMG/6T.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>5.OnePlus 6T</h2>
@@ -138,7 +138,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/note 7.jpg">
+                <img class="photo" src="IMG/note7.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>6.Xiaomi Redmi Note 7</h2>
@@ -158,7 +158,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/XS Max.jpg">
+                <img class="photo" src="IMG/XSMax.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>7.Apple iPhone Xs Max</h2>
@@ -178,7 +178,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/smart Z.jpg">
+                <img class="photo" src="IMG/smartZ.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>8.HUAWEI P smart Z</h2>
@@ -198,7 +198,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/M20.jpg">
+                <img class="photo" src="IMG/M20.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>9.Samsung Galaxy M20</h2>
@@ -218,7 +218,7 @@
         </div>
         <div class="blog-card">
             <div class="meta">
-                <img class="photo" src="IMG/8 pro.jpg">
+                <img class="photo" src="IMG/8pro.jpg" alt="...">
             </div>
             <div class="description">
                 <h2>10.Xiaomi Redmi Note 8 Pro</h2>
@@ -236,12 +236,17 @@
                 </ul>
             </div>
         </div>
+
     </section>
+
     <header>
         <h1>Video:</h1>
     </header>
+
     <section class="video" id="Video">
+
         <ul class="video-gallery">
+
             <li>
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/7SB5eKrwXnU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </li>
@@ -281,18 +286,20 @@
             <li>
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/AkDfh_RG0F0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </li>
-    </section>
+        </ul>
 
+    </section>
     <header>
         <h1>Contacte:</h1>
     </header>
+
     <section class="contacte" id="Contact">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d36710.46750896094!2d27.891060449999998!3d47.7612147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1577443074188!5m2!1sru!2s" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </section>
 
-<header>
-    <h1>Despre noi:</h1>
-</header>
+    <header>
+        <h1>Despre noi:</h1>
+    </header>
 
 <section class="desprenoi" id="Despre noi">
 
@@ -310,9 +317,10 @@
 
 </section>
 
-<header>
-    <h1>Alegerea:</h1>
-</header>
+    <header>
+        <h1>Alegerea:</h1>
+    </header>
+
 <section class="alegerea" id="Alegerea">
 
     <div class="blog-card">
@@ -323,7 +331,7 @@
             <h2>Cum să aleg un smartphon perfect?</h2>
             <p>In ziua de azi, putine obiecte au devenit atat de utile precum un smartphone. Atunci cand vrei sa iti schimbi telefonul, ai trei mari optiuni, in functie de sistemul de operare: iOS, Android si Windows Phone. O problema destul de spinoasa, cand te gandesti ca se apropie Black Friday si in ziua respectiva chiar nu prea ai timp sa meditezi la alegerea potrivita.</p>
             <p>In privinta iPhone, lucrurile sunt relativ simple, pentru ca ai doar cateva modele din care sa alegi. Nu vrei sa dai o caruta de bani pentru iPhone 5S sau 5C? Nicio problema! Alegi iPhone 5 si te-ai rezolvat. Daca iti place interfata Windows Phone, alegerile sunt si ele destul de putine. Insa marea problema apare in cazul Android, unde chiar si o lista scurta cuprinde zeci de modele, fara sa mai includem telefoanele cu tastatura. Deci, cum sa-ti alegi telefonul potrivit?</p>
-            <img class="photo" src="IMG/bak.jpg">
+            <img class="photo" src="IMG/bak.jpg" alt="...">
             <h2>SISTEM DE OPERARE</h2>
             <p>E poate primul lucru pe care sa-l iei in calcul. Fiecare OS are avantaje si dezavantaje si o alegere gresita te poate face sa regreti mult timp. Daca vrei un telefon relativ simplu, care sa se miste bine si sa nu-ti dea multe batai de cap cu setarile sau posibilitatile de personalizare, alege un iPhone. Cel mai mare dezavantaj e insa pretul. In schimb, daca iti place designul interfetei Metro si vrei sa fii putin altfel, incearca Windows Phone.</p>
             <p>Am lasat Android la urma pentru ca se adreseaza atat celor care nu au un buget foarte mare cat si celor mai geek dintre noi. Fragmentarea Android in schimb poate pune ceva probleme. Daca nu alegi un Nexus, ai ceva de asteptat pana sa primesti un update, si in general majoritatea telefoanelor nu primesc mai mult de doua actualizari. In plus, chiar si varfurile de gama se mai confrunta cu momente in care au lag si se misca precum o broasca testoasa. Nu mai vorbim de telefoanele low-end. Insa Android mai are un avantaj. Daca nu-ti convine ROM-ul instalat de producator, il poti schimba oricand cu un ROM custom. Sau ti-l poti crea singur, daca te pricepi.</p>
@@ -351,8 +359,8 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="js/menu.js"></script>
+<script src="js/main.js"></script>
+<script src="js/menu.js"></script>
 
 </body>
 
