--- a/WEB Phone (Bootstrap)/index.html
+++ b/WEB Phone (Bootstrap)/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#Contact">Contacte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Despre noi">Despre noi</a>
+                    <a class="nav-link" href="#Despre_noi">Despre noi</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#Alegerea">Ce să aleg?</a>
@@ -440,7 +440,7 @@
 
     <!-- Despre noi -->
     <br>
-    <section id="Despre noi">
+    <section id="Despre_noi">
         <div class="container">
             <div class="row">
 
