--- a/WEB Phone (Nativ)/Despre noi.html
+++ b/WEB Phone (Nativ)/Despre noi.html
@@ -19,7 +19,7 @@
             <li><a href="Acasă.html">Acasă</a></li>
             <li><a href="Video.html">Video</a></li>
             <li><a href="Contact.html">Contacte</a></li>
-            <li><a href="Despre noi.html">Despre noi</a></li>
+            <li><a href="Despre_noi.html">Despre noi</a></li>
             <li><a href="Alegerea.html">Ce să aleg?</a></li>
         </ul>
     </nav>
